feat: add Show In File Explorer button to Edit Mods right click menu